Use updated versions of Jackson Jars
jackson-annotations-2.9.4.jar
jackson-core-2.9.4.jar
jackson-databind-2.9.4.jar
jackson-jaxrs-base-2.9.4.jar
jackson-jaxrs-json-provider-2.9.4.jar
jackson-module-jaxb-annotations-2.9.4.jar

Change-Id: If762a0877100d02fc36ea3c57eb544a5f59dd49c

--- a/vmidentity/rest/idm/server/pom.xml
+++ b/vmidentity/rest/idm/server/pom.xml
@@ -31,6 +31,22 @@
       <groupId>org.glassfish.jersey.media</groupId>
       <artifactId>jersey-media-json-jackson</artifactId>
       <version>${jersey.version}</version>
+      <exclusions>
+        <exclusion>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </exclusion>
+        <exclusion>
+            <groupId>com.fasterxml.jackson.jaxrs</groupId>
+            <artifactId>jackson-jaxrs-base</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.jaxrs</groupId>
+      <artifactId>jackson-jaxrs-json-provider</artifactId>
+      <version>${jackson-jaxrs-json-provider.version}</version>
     </dependency>
 
     <dependency>
