--- a/vmidentity/pom.xml
+++ b/vmidentity/pom.xml
@@ -372,6 +372,7 @@
     <jaxws-tools.version>2.2.7</jaxws-tools.version>
     <jcip.version>1.0</jcip.version>
     <jersey.version>2.25.1</jersey.version>
+    <jackson-jaxrs-json-provider.version>2.9.4</jackson-jaxrs-json-provider.version>
     <joda.version>2.2</joda.version>
     <jsr173_api.version>1.0</jsr173_api.version>
     <jsr181-api.version>1.0-MR1</jsr181-api.version>
