--- a/vmidentity/lightwaveui/web/bower.json
+++ b/vmidentity/lightwaveui/web/bower.json
@@ -6,13 +6,13 @@
   "license": "Apache 2.0",
   "private": true,
   "dependencies": {
-    "angular": "~1.4.0",
-    "angular-cookies": "~1.4.0",
-    "angular-route": "~1.4.0",
-    "angular-loader": "~1.4.0",
-    "angular-mocks": "~1.4.0",
+    "angular": "1.5.8",
+    "angular-cookies": "1.5.8",
+    "angular-route": "1.5.8",
+    "angular-loader": "1.5.8",
+    "angular-mocks": "1.5.8",
     "html5-boilerplate": "~5.2.0",
-    "jquery": "~2.1.1",
+    "jquery": "3.0.0",
     "angular-flash-alert": "^2.2.4",
     "angular-bootstrap": "latest",
     "moment": "2.12.0",
@@ -24,7 +24,7 @@
     "kjur-jsrsasign": "jsrsasign#^5.0.12"
   },
   "resolutions": {
-    "angular-cookies": "^1.5.0",
+    "angular-cookies": "1.5.8",
     "ng-dialog": "^0.6.2"
   }
 }
