--- a/vmidentity/lightwaveui/web/package.json
+++ b/vmidentity/lightwaveui/web/package.json
@@ -30,9 +30,7 @@
     "karma-junit-reporter": "^0.2.2",
     "karma-ng-html2js-preprocessor": "^1.0.0",
     "karma-opera-launcher": "^1.0.0",
-    "karma-phantomjs-launcher": "^1.0.0",
     "karma-safari-launcher": "^1.0.0",
-    "phantomjs": "^2.1.7",
     "protractor": "^2.1.0",
     "shelljs": "^0.2.6"
   },
@@ -57,6 +55,7 @@
     "gulp-html-minifier": "^0.1.8",
     "gulp-install": "^0.6.0",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.5.4"
+    "gulp-uglify": "^1.5.4",
+    "watchify": "^3.11.0"
   }
 }
