POST: honor HTTP header connection keep-alive to re-use SSL connection
Bug Number: 2076798

Integrated curl handle support with proxy code. New cache APIs added.
Till now proxy used a new curl handle for every request. With this
change we will be caching these handles to improve performance. We will
remove the overhead of creating a handle and will be able to reuse
protocol level connections.

Test cases:

1) Regression testing
2) Make sure handle can be reused after 20 mins
3) Make sure handle is really reused for same host

Change-Id: I541172b6c9efa9a5eea2a6a8ac7a9b844e793bfe

--- a/lwraft/server/rest-head/Makefile.am
+++ b/lwraft/server/rest-head/Makefile.am
@@ -10,6 +10,7 @@ librest_head_la_SOURCES += \
     auth.c \
     authtoken.c \
     cache.c \
+    curlhandlecache.c \
     decode.c \
     encode.c \
     etcdapi.c \
