Added mdb compaction script and wal flush utility
Compaction is called in after_install.sh. The latest mdb binaries are installed
from bintray in before_install.sh.
walflush opens and closes the mdb env to flush the wal to the DB.

Change-Id: I773f4a497a2416bee02a751c0b370b283bc84c23

--- a/configure.ac
+++ b/configure.ac
@@ -1533,6 +1533,7 @@ AC_CONFIG_FILES([Makefile
                  lwraft/tools/vdcaclmgr/Makefile
                  lwraft/tools/vdcadmintool/Makefile
                  lwraft/tools/vdcschema/Makefile
+                 lwraft/tools/mdb_walflush/Makefile
                  lwraft/thirdparty/Makefile
                  lwraft/thirdparty/openldap/Makefile
                  lwraft/thirdparty/openldap/libraries/Makefile
