--- a/vmdir/server/vmdir/Makefile.am
+++ b/vmdir/server/vmdir/Makefile.am
@@ -35,6 +35,7 @@ vmdird_SOURCES = \
     tenantmgmt.c \
     tombstone.c \
     tracklastlogin.c \
+    trusts.c \
     utils.c \
     vmdir_sstub.c \
     vmdirftp_sstub.c \
