PR 2094678: DR:DC restore from back DB: part 1
vmdir server side change to allow DR to restore from backup DB.
1. clean up DC objects
2. clean up server objects
3. clean up managed service objects.
4. clean up DNS records.
5. shutdonw/init ACL - to pick up DOMAIN SID from backup DB
6. advance server id
7. create server object for this new nod

Change-Id: Ic93f4826eefabbad8dcf51c33417dea9f569e55f

--- a/vmdir/server/common/Makefile.am
+++ b/vmdir/server/common/Makefile.am
@@ -15,6 +15,7 @@ libsrvcommon_la_SOURCES = \
     dcconnthr.c           \
     entryencodedecode.c   \
     krbsrvutil.c          \
+    nodeidentity.c        \
     oidctovmdirerror.c    \
     oprequestutil.c       \
     security-sd.c         \
