--- a/config/scripts/configure-lightwave-server.in
+++ b/config/scripts/configure-lightwave-server.in
@@ -80,10 +80,11 @@ LOTUS_PARTNER_HOSTNAME=
 LOTUS_SITE_NAME=Default-first-site
 LOTUS_HOSTNAME=
 LOTUS_DNS_FORWARDERS=
+LOTUS_PARENT_DOMAIN_DEFAULT=
 LOTUS_SSL_SUBJECT_ALT_NAME=
 DISABLE_DNS=0
 DISABLE_STS=0
-USAGE="configure-lightwave-server [--username <admin-username>] --password <password> [--domain <domain-name>] [--server <partner-host-name>] [--site <site-name>] [--hostname <hostname | IP Address>] [--dns-forwarders <comma-separated list of IP Addresses>] [--ssl-subject-alt-name <SSL Subject Alternative Name>] [--disable-dns] [--disable-sts] [--config-file <configuration file>]"
+USAGE="configure-lightwave-server [--username <admin-username>] --password <password> [--domain <domain-name>] [--server <partner-host-name>] [--site <site-name>] [--hostname <hostname | IP Address>] [--dns-forwarders <comma-separated list of IP Addresses>] [--ssl-subject-alt-name <SSL Subject Alternative Name>] [--disable-dns] [--disable-sts] [--config-file <configuration file>] [--parent-domain <parent domain>] [--parent-dc <parent dc>] [--parent-username <parent admin user>] [--parent-password <parent admin user password>]"
 export SUPPORT_RHTTP_PROXY=0
 
 # Read passed parameters.
@@ -130,6 +131,19 @@ if [ $# -gt 0 ]; then
                     "--disable-sts")
                       DISABLE_STS=1
                       ;;
+                    "--parent-domain")
+                      LOTUS_DEPLOYMENT=child
+                      MODE="parent-domain"
+                      ;;
+                    "--parent-dc")
+                      MODE="parent-dc"
+                      ;;
+                    "--parent-username")
+                      MODE="parent-username"
+                      ;;
+                    "--parent-password")
+                      MODE="parent-password"
+                      ;;
                     *)
                       echo "Invalid parameter : $arg"
                       echo $USAGE
@@ -173,6 +187,22 @@ if [ $# -gt 0 ]; then
                 LOTUS_CONFIG_FILE=$arg
                 MODE=open
                 ;;
+             "parent-domain")
+                LOTUS_PARENT_DOMAIN_DEFAULT=$arg
+                MODE=open
+                ;;
+             "parent-dc")
+                LOTUS_PARENT_DC_DEFAULT=$arg
+                MODE=open
+                ;;
+             "parent-username")
+                LOTUS_PARENT_ADMIN_DEFAULT=$arg
+                MODE=open
+                ;;
+             "parent-password")
+                LOTUS_PARENT_ADMIN_PASSWORD_DEFAULT=$arg
+                MODE=open
+                ;;
              *)
                 echo "Invalid mode : $MODE"
                 echo $USAGE
@@ -197,6 +227,10 @@ if [ -f "$LOTUS_CONFIG_FILE" ]; then
     LOTUS_SSL_SUBJECT_ALT_NAME=$(grep "^ssl-subject-alt-name=" $LOTUS_CONFIG_FILE | $AWK -F"=" '{print $2}')
     DISABLE_DNS=$(grep "^disable-dns=" $LOTUS_CONFIG_FILE | $AWK -F"=" '{print $2}')
     DISABLE_STS=$(grep "^disable-sts=" $LOTUS_CONFIG_FILE | $AWK -F"=" '{print $2}')
+    LOTUS_PARENT_DOMAIN_DEFAULT=$(grep "^parent-domain=" $LOTUS_CONFIG_FILE | $AWK -F"=" '{print $2}')
+    LOTUS_PARENT_DC_DEFAULT=$(grep "^parent-dc=" $LOTUS_CONFIG_FILE | $AWK -F"=" '{print $2}')
+    LOTUS_PARENT_ADMIN_DEFAULT=$(grep "^parent-admin=" $LOTUS_CONFIG_FILE | $AWK -F"=" '{print $2}')
+    LOTUS_PARENT_ADMIN_PASSWORD_DEFAULT=$(grep "^parent-password=" $LOTUS_CONFIG_FILE | $AWK -F"=" '{print $2}')
 fi
 
 if [ -z "$LOTUS_HOSTNAME" ]; then
@@ -216,6 +250,16 @@ case "$LOTUS_DEPLOYMENT" in
 
         if [ "x$LOTUS_PARTNER_HOSTNAME" == "x" ]; then
            echo "Error : A partner hostname must be specified"
+           echo $USAGE
+           exit 1
+        fi
+        ;;
+    "child")
+        echo "Deploying in standalone mode as a child domain..."
+        lotus_first_instance=true;
+
+        if [ "x$LOTUS_PARENT_DOMAIN_DEFAULT" == "x" ]; then
+           echo "Error : A parent domain name must be specified"
            echo $USAGE
            exit 1
         fi
@@ -386,6 +430,18 @@ else
                 --password "$LOTUS_ADMIN_PASSWORD_DEFAULT" \
                 --site $LOTUS_SITE_NAME \
                 --partner $LOTUS_PARTNER_HOSTNAME \
+                $LOTUS_SSL_SUBJECT_ALT_NAME_ARG
+            ;;
+        "child")
+            $BIN_DIR/ic-promote \
+                --domain $LOTUS_DOMAIN_DEFAULT \
+                --username $LOTUS_ADMIN_DEFAULT \
+                --password "$LOTUS_ADMIN_PASSWORD_DEFAULT" \
+                --site $LOTUS_SITE_NAME \
+                --parent-domain $LOTUS_PARENT_DOMAIN_DEFAULT \
+                --parent-dc $LOTUS_PARENT_DC_DEFAULT \
+                --parent-username $LOTUS_PARENT_ADMIN_DEFAULT \
+                --parent-password $LOTUS_PARENT_ADMIN_PASSWORD_DEFAULT \
                 $LOTUS_SSL_SUBJECT_ALT_NAME_ARG
             ;;
     esac
