Optimize repl convergence time - Phase 1
Bug Number: 2084946

Problem:
During deployment scenario, due to protocol change in
optimize replication convergence time fix (deadlock detection vector)
some nodes exercising old and new code results in
corrupting the UTD vector.

Changes:
Optimization change will be rolled out in two phases will solve this
problem.

This diff contains the first phase which has the UTDVector update logic
    - Logic to convert UTD Vector to hash map
    - Logic to Update UTD Vector hash map and high watermark
    - Logic to convert the UTD Vector hash map and high watermark
      into a string.

Testing:
Tested in a 3-node ring topology with a mix of old and new code and
verified there is no corruption.

Change-Id: I891431e226ca5e8bff42795ef3dda74e57151584

--- a/vmdir/server/common/Makefile.am
+++ b/vmdir/server/common/Makefile.am
@@ -21,6 +21,7 @@ libsrvcommon_la_SOURCES = \
     security-sd.c         \
     srp.c                 \
     util.c                \
+    vectorutils.c         \
     vmafdlib.c            \
     vmdirentry.c          \
     vmdirtoldaperror.c
