PR 2099354: server side change for hot backup database
1. add new API VmDirBackupDB
2. add new RPC function RpcVmDirBackupDB
3. support multiple concurrent db hot copy (from VmDirBackupDB or new node join)
4. retire mdb dbcopy thread and logic

TEST:
0. keep provision into LW node (A)
1. perform single dic-cli database-backup
2. perform two    dic-cli database-backup
3. perform three  dic-cli database-backup
4. perform two dic-cli database-backup + joining a new node

vmdir log for test 4 above.
Apr 19 15:51:33 lw-t1 vmdird[108299]: t@140552293033728: VmDirSetMdbBackendState, set (KEEPXLOGS) called
Apr 19 15:51:34 lw-t1 vmdird[108299]: t@140552293033728: _VmDirSetMdbStateInLock, set MDB state to (KEEPXLOGS), logNum (10000052), DB size (132 MB), map size (102400 MB)
Apr 19 15:51:35 lw-t1 vmdird[108299]: t@140552508622592: VmDirSetMdbBackendState, set (KEEPXLOGS) called
Apr 19 15:51:35 lw-t1 vmdird[108299]: t@140552508622592: executing cp /var/lib/vmware/vmdir/data.mdb /var/lib/vmware/backup/vmdir/20180416/data.mdb
Apr 19 15:51:37 lw-t1 vmdird[108299]: t@140552508622592: VmDirSetMdbBackendState, set (GETXLOGNUM) called
Apr 19 15:51:37 lw-t1 vmdird[108299]: t@140552508622592: executing cp /var/lib/vmware/vmdir/xlogs/10000052 /var/lib/vmware/backup/vmdir/20180416/xlogs/10000052
Apr 19 15:51:37 lw-t1 vmdird[108299]: t@140552508622592: VmDirSetMdbBackendState, set (CLEAR) called
Apr 19 15:51:37 lw-t1 vmdird[108299]: t@140552500229888: VmDirSetMdbBackendState, set (KEEPXLOGS) called
Apr 19 15:51:37 lw-t1 vmdird[108299]: t@140552500229888: executing cp /var/lib/vmware/vmdir/data.mdb /var/lib/vmware/backup/vmdir/20180413/data.mdb
Apr 19 15:51:38 lw-t1 vmdird[108299]: t@140552500229888: VmDirSetMdbBackendState, set (GETXLOGNUM) called
Apr 19 15:51:38 lw-t1 vmdird[108299]: t@140552500229888: executing cp /var/lib/vmware/vmdir/xlogs/10000052 /var/lib/vmware/backup/vmdir/20180413/xlogs/10000052
Apr 19 15:51:38 lw-t1 vmdird[108299]: t@140552500229888: VmDirSetMdbBackendState, set

--- a/vmdir/client/Makefile.am
+++ b/vmdir/client/Makefile.am
@@ -12,6 +12,7 @@ libvmdirclient_la_CPPFLAGS = \
 libvmdirclient_la_SOURCES = \
     binding.c \
     client.c \
+    dbbackupclient.c \
     globals.c \
     groups.c \
     krb5login.c \
