--- a/vmdir/server/vmdir/Makefile.am
+++ b/vmdir/server/vmdir/Makefile.am
@@ -6,6 +6,7 @@ vmdird_SOURCES = \
     accountmgmt.c \
     auth.c \
     background.c \
+    dbbackup.c \
     globals.c \
     heartbeat.c \
     index.c \
