Add new tool for domain demote and leave
This change adds a new cli tool "lightwave". The new functionality
that it provides is:
    demote a Lightwave server from a remote node (PR#1977644)
    leave a Lightwave client from a remote node (PR#1977642)

This tool also has commands for promote and join, so it can replace
ic-promote, ic-leave, domainjoin, and vdcleavefed.

Testing:
  1) promote/demote
     s1: lightwave domain promote --password 'X' --domain example.com
     s1: lightwave domain demote  --password 'X'

  2) promote/demote (remote)
     s1: lightwave domain promote --password 'X' --domain example.com
     s2: lightwave domain promote --password 'X' --domain example.com --partner s1.example.com
     s1: lightwave domain demote  --password 'X' --domain-controller s2.example.com

  3) join/leave
     s1: lightwave domain promote --password 'X' --domain example.com
     c1: lightwave domain join    --password 'X' --domain example.com
     c1: lightwave domain leave   --password 'X'

  4) join/leave (remote)
     s1: lightwave domain promote --password 'X' --domain example.com
     c1: lightwave domain join    --password 'X' --domain example.com
     s1: lightwave domain leave   --password 'X' --client c1.example.com

Change-Id: Iab486bc6010081a99c14ec04de88dc679afe603a

--- a/config/tools/lightwave/Makefile.am
+++ b/config/tools/lightwave/Makefile.am
@@ -1,19 +1,12 @@
-lib_LTLIBRARIES = libcfgutils.la
+SUBDIRS = domain
 
-libcfgutils_la_SOURCES = \
-    certificate.c \
-    cfgutils.c    \
-    dns.c         \
-    globals.c     \
-    libmain.c     \
-    logging.c     \
-    memory.c      \
-    service.c     \
-    strings.c     \
-    sysutils.c    \
-    validate.c
+bin_PROGRAMS = lightwave
 
-libcfgutils_la_CPPFLAGS = \
+lightwave_SOURCES = \
+    main.c \
+    domain.c
+
+lightwave_CPPFLAGS = \
     -I$(top_srcdir)/config/include \
     -I$(top_srcdir)/config/include/public \
     -I$(top_srcdir)/vmafd/include/public \
@@ -22,23 +15,28 @@ libcfgutils_la_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/include/public \
     @LW_INCLUDES@
 
-libcfgutils_la_LIBADD = \
+lightwave_LDADD = \
+    @top_builddir@/config/tools/lightwave/domain/libdomain.la \
+    @top_builddir@/config/cfgutils/libcfgutils.la \
     @top_builddir@/vmafd/client/libvmafdclient.la \
     @top_builddir@/vmca/client/libvmcaclient.la \
     @top_builddir@/vmdns/client/libvmdnsclient.la \
     @top_builddir@/vmdir/client/libvmdirclient.la \
     @LWSM_LIBS@ \
-    @LWADVAPI_LIBS@ \
     @DCERPC_LIBS@ \
+    @LWRSUTILS_LIBS@ \
     @LWIO_LIBS@ \
     @SCHANNEL_LIBS@ \
     @LWMSG_LIBS@ \
     @LWREG_LIBS@ \
     @LWBASE_LIBS@ \
-    @LWRSUTILS_LIBS@ \
-    @LWREG_LIBS@ \
-    @CRYPTO_LIBS@
+    @LWADVAPI_LIBS@ \
+    @CRYPTO_LIBS@ \
+    @GSSAPI_LIBS@ \
+    @UUID_LIBS@ \
+    @LDAP_LIBS@ \
+    @PTHREAD_LIBS@
 
-libcfgutils_la_LDFLAGS = \
+lightwave_LDFLAGS = \
     @LW_LDFLAGS@ \
     @OPENSSL_LDFLAGS@
