optimize convergence time - Remove Role Exlucsion
Bug Number: 2084946

Changes:
    Removed role exclusion and added logic to detect and recover
    from distributed deadlock.

Testing:
    1) Performed basic tests in a ring topology.
           - Write to all 3 nodes simultaneously
           - Check whether changes have converged with updated hw and
             Utd vector by restarting the vmdir.
           - After restart integrity check should be clean and no
             68 (entry already exsits) errors
    2) In the 6 node production like setup. Run multiple tests to ensure
       replication is working fine
           - Add users on all the nodes simulataneously
           - Add tenants on all the nodes simulateously (results in
             out of sequence and add->modify scenarios)
           - Multi value attributes test. Added members to group
             simultaneously.
       verification: for all the tests was done using integrity check
       twice. one before and after restart.

Change-Id: Ic58e6256f31088521fa8f5a611f78ece80289901

--- a/vmdir/server/replication/Makefile.am
+++ b/vmdir/server/replication/Makefile.am
@@ -2,6 +2,7 @@
 noinst_LTLIBRARIES = libreplication.la
 
 libreplication_la_SOURCES = \
+    deadlockdetectionvector.c \
     drrestore.c \
     firstreplcycle.c \
     globals.c \
