--- a/config/scripts/Makefile.am
+++ b/config/scripts/Makefile.am
@@ -2,7 +2,10 @@ bin_SCRIPTS = \
     @top_builddir@/config/scripts/configure-lightwave-server \
     @top_builddir@/config/scripts/configure-identity-server \
     @top_builddir@/config/scripts/configure-sts \
-    @top_srcdir@/config/scripts/domainjoin.sh
+    @top_srcdir@/config/scripts/domainjoin.sh \
+    @top_srcdir@/config/scripts/run_backup.sh \
+    @top_srcdir@/config/scripts/lw_backup.sh \
+    @top_srcdir@/config/scripts/aws_backup_common.sh
 
 scriptsconf_SCRIPTS = \
  setfirewallrules.py \
