Support multiple photon versions
Change-Id: I924a767c8748bc5d1c531a9d6c5b70770bc28e60

Separate builds and runtime on Photon-1.0 versus Photon 2.0

Jira ID: CNA-802

Change-Id: I558433d932e108a899ebe90fc0c4184c3ed557be

--- a/.gitignore
+++ b/.gitignore
@@ -587,6 +587,7 @@ build/vmevent/
 build/vmidentity/
 build/vmmetrics/
 build/rpmbuild/
+build/docker
 
 vmidentity/lightwaveui/src
 vmidentity/lightwaveui/web/share
