--- a/lwraft/tools/lwraft-cli/Makefile.am
+++ b/lwraft/tools/lwraft-cli/Makefile.am
@@ -27,7 +27,8 @@ post_cli_LDADD = \
     @UUID_LIBS@ \
     @GSSAPI_LIBS@ \
     @LDAP_LIBS@ \
-    @PTHREAD_LIBS@
+    @PTHREAD_LIBS@ \
+    @DL_LIBS@
 
 post_cli_LDFLAGS = \
     @DCERPC_LDFLAGS@ \
