--- a/lwraft/tools/lwraftpromo/Makefile.am
+++ b/lwraft/tools/lwraftpromo/Makefile.am
@@ -26,7 +26,8 @@ lwraftpromo_LDADD = \
     @UUID_LIBS@ \
     @GSSAPI_LIBS@ \
     @LDAP_LIBS@ \
-    @PTHREAD_LIBS@
+    @PTHREAD_LIBS@ \
+    @DL_LIBS@
 
 lwraftpromo_LDFLAGS = \
     @DCERPC_LDFLAGS@ \
