--- a/lwraft/tools/vdcadmintool/Makefile.am
+++ b/lwraft/tools/vdcadmintool/Makefile.am
@@ -30,7 +30,8 @@ postadmintool_LDADD = \
     @UUID_LIBS@ \
     @GSSAPI_LIBS@ \
     @SASL_LIBS@ \
-    @LDAP_LIBS@
+    @LDAP_LIBS@ \
+    @DL_LIBS@
 
 postadmintool_LDFLAGS = \
     @DCERPC_LDFLAGS@ \
