--- a/vmdir/tools/vdcaclmgr/Makefile.am
+++ b/vmdir/tools/vdcaclmgr/Makefile.am
@@ -30,7 +30,8 @@ vdcaclmgr_LDADD = \
     @LDAP_LIBS@ \
     @PTHREAD_LIBS@ \
     @UUID_LIBS@ \
-    @LBER_LIBS@
+    @LBER_LIBS@ \
+    @DL_LIBS@
 
 vdcaclmgr_LDFLAGS = \
     @OPENSSL_LDFLAGS@ \
