--- a/vmdir/tools/vdcadmintool/Makefile.am
+++ b/vmdir/tools/vdcadmintool/Makefile.am
@@ -31,7 +31,8 @@ vdcadmintool_LDADD = \
     @UUID_LIBS@ \
     @SASL_LIBS@ \
     @LDAP_LIBS@ \
-    @LBER_LIBS@
+    @LBER_LIBS@ \
+    @DL_LIBS@
 
 vdcadmintool_LDFLAGS = \
     @DCERPC_LDFLAGS@ \
