--- a/vmdir/tools/vdcleavefed/Makefile.am
+++ b/vmdir/tools/vdcleavefed/Makefile.am
@@ -24,7 +24,8 @@ vdcleavefed_LDADD = \
     @CRYPT_LIBS@ \
     @UUID_LIBS@ \
     @GSSAPI_LIBS@ \
-    @LDAP_LIBS@
+    @LDAP_LIBS@ \
+    @DL_LIBS@
 
 vdcleavefed_LDFLAGS = \
     @OPENSSL_LDFLAGS@ \
