--- a/vmdir/tools/vdcpass/Makefile.am
+++ b/vmdir/tools/vdcpass/Makefile.am
@@ -27,7 +27,8 @@ vdcpass_LDADD = \
     @UUID_LIBS@ \
     @SASL_LIBS@ \
     @LDAP_LIBS@ \
-    @LBER_LIBS@
+    @LBER_LIBS@ \
+    @DL_LIBS@
 
 vdcpass_LDFLAGS = \
     @OPENSSL_LDFLAGS@ \
