--- a/vmdir/tools/vdcpromo/Makefile.am
+++ b/vmdir/tools/vdcpromo/Makefile.am
@@ -27,7 +27,8 @@ vdcvmdirpromo_LDADD = \
     @UUID_LIBS@ \
     @SASL_LIBS@ \
     @LDAP_LIBS@ \
-    @LBER_LIBS@
+    @LBER_LIBS@ \
+    @DL_LIBS@
 
 vdcvmdirpromo_LDFLAGS = \
     @DCERPC_LDFLAGS@ \
