--- a/vmdir/tools/vdcrepadmin/Makefile.am
+++ b/vmdir/tools/vdcrepadmin/Makefile.am
@@ -30,7 +30,8 @@ vdcrepadmin_LDADD = \
     @UUID_LIBS@ \
     @SASL_LIBS@ \
     @LDAP_LIBS@ \
-    @LBER_LIBS@
+    @LBER_LIBS@ \
+    @DL_LIBS@
 
 vdcrepadmin_LDFLAGS = \
     @OPENSSL_LDFLAGS@ \
