--- a/vmdir/tools/vdcresetMachineActCred/Makefile.am
+++ b/vmdir/tools/vdcresetMachineActCred/Makefile.am
@@ -26,7 +26,8 @@ vdcresetMachineActCred_LDADD = \
     @CRYPT_LIBS@ \
     @UUID_LIBS@ \
     @GSSAPI_LIBS@ \
-    @LDAP_LIBS@
+    @LDAP_LIBS@ \
+    @DL_LIBS@
 
 vdcresetMachineActCred_LDFLAGS = \
     @OPENSSL_LDFLAGS@ \
