Add restore script for DR.
The script will be run on the DR node. It calls first-dc-init, fixes the certs and then downloads and patches the backup
DB from S3.

Change-Id: I72f611afca48106e55bbbb4cde3aa0e182db7853

--- a/config/scripts/Makefile.am
+++ b/config/scripts/Makefile.am
@@ -5,7 +5,9 @@ bin_SCRIPTS = \
     @top_srcdir@/config/scripts/domainjoin.sh \
     @top_srcdir@/config/scripts/run_backup.sh \
     @top_srcdir@/config/scripts/lw_backup.sh \
-    @top_srcdir@/config/scripts/aws_backup_common.sh
+    @top_srcdir@/config/scripts/aws_backup_common.sh \
+    @top_srcdir@/config/scripts/lw_restore.sh \
+    @top_srcdir@/config/scripts/aws_restore_common.sh
 
 scriptsconf_SCRIPTS = \
  setfirewallrules.py \
