--- a/ui/lwraft-ui/Makefile
+++ b/ui/lwraft-ui/Makefile
@@ -23,4 +23,4 @@ rpm: ng-cli
 	rpmbuild --define "_topdir `pwd`/stage" -ba build/lwraft-ui.spec
 
 clean:
-	rm -rf stage dist
+	rm -rf stage dist node_modules
