Added option to lightwave utility to delete DC records.
Added a command called dns and a delete option. Provision option will be added later. It accepts username, password, DC
name and domain name.

Change-Id: Ie59e24657b9cbf821f7dacfe75e2c7f8279214af

--- a/config/tools/lightwave/Makefile.am
+++ b/config/tools/lightwave/Makefile.am
@@ -1,10 +1,13 @@
-SUBDIRS = domain
+SUBDIRS = \
+    domain \
+    dns
 
 bin_PROGRAMS = lightwave
 
 lightwave_SOURCES = \
     main.c \
-    domain.c
+    domain.c \
+    dns.c
 
 lightwave_CPPFLAGS = \
     -I$(top_srcdir)/config/include \
@@ -17,6 +20,7 @@ lightwave_CPPFLAGS = \
 
 lightwave_LDADD = \
     @top_builddir@/config/tools/lightwave/domain/libdomain.la \
+    @top_builddir@/config/tools/lightwave/dns/libdns.la \
     @top_builddir@/config/cfgutils/libcfgutils.la \
     @top_builddir@/vmafd/client/libvmafdclient.la \
     @top_builddir@/vmca/client/libvmcaclient.la \
