--- a/configure.ac
+++ b/configure.ac
@@ -1735,6 +1735,7 @@ AC_CONFIG_FILES([Makefile
                  config/tools/ic-join/Makefile
                  config/tools/lightwave/Makefile
                  config/tools/lightwave/domain/Makefile
+                 config/tools/lightwave/dns/Makefile
                  config/scripts/Makefile
                  config/scripts/configure-lightwave-server
                  config/scripts/configure-identity-server
