PR 2115070: POST DR: server side chg
Bug Number: 2115070

TEST:
1. three node post cluster
2. heavy provision to master
3. perform backup session concurrently
4. install a new node and use backup to DR
5. validate prior data was intact

Change-Id: I11e23b80c4632d30f36d619bfd767869dc45ef55

--- a/lwraft/server/mdb-store/Makefile.am
+++ b/lwraft/server/mdb-store/Makefile.am
@@ -13,6 +13,7 @@ noinst_LTLIBRARIES = libmdb-store.la
 
 libmdb_store_la_SOURCES = \
     config.c \
+    dbstate.c \
     entry.c \
     generic.c \
     globals.c \
