PR 2115070: POST DR: client side chg
Bug Number: 2115070

Change-Id: I05634b108dbdc0b89e6fa644c245e9279d6c089f

--- a/lwraft/client/Makefile.am
+++ b/lwraft/client/Makefile.am
@@ -12,6 +12,7 @@ libpostclient_la_CPPFLAGS = \
 libpostclient_la_SOURCES = \
     binding.c \
     client.c \
+    dbbackupclient.c \
     globals.c \
     krb5login.c \
     ldaputil.c \
