PR 2115070: POST DR: cli chg
Bug Number: 2115070

Change-Id: Id39382c93458eb3cfae8f8f012dbf4be7269ea61

--- a/lwraft/tools/lwraft-cli/Makefile.am
+++ b/lwraft/tools/lwraft-cli/Makefile.am
@@ -1,7 +1,9 @@
 bin_PROGRAMS = post-cli
 
 post_cli_SOURCES = \
-    clinode.c  \
+    clinode.c \
+    clibackup.c \
+    clidr.c \
     main.c
 
 post_cli_CPPFLAGS = \
