--- a/vmidentity/idm/server/pom.xml
+++ b/vmidentity/idm/server/pom.xml
@@ -97,6 +97,15 @@
       <artifactId>jna-platform</artifactId>
       <version>${net.dev.jna}</version>
     </dependency>
+
+    <!-- Test Dependencies -->
+    <dependency>
+      <groupId>org.easymock</groupId>
+      <artifactId>easymock</artifactId>
+      <version>${easymock.version}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <properties>
