--- a/vmafd/interop/java/cdc/pom.xml
+++ b/vmafd/interop/java/cdc/pom.xml
@@ -5,4 +5,11 @@
   <groupId>com.vmware.vmafd</groupId>
   <artifactId>client-domain-controller-cache</artifactId>
   <version>1.2.0-SNAPSHOT</version>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit-dep</artifactId>
+      <version>4.8.2</version>
+    </dependency>
+  </dependencies>
 </project>
