Switch configure-lightwave-server to use new domain promotion binary. (follow up to new promotion tool work - PR#1977644)
Change-Id: Ieb572d130a5e8af11d89f46e137c44c994fbe5cc

--- a/config/scripts/configure-lightwave-server.in
+++ b/config/scripts/configure-lightwave-server.in
@@ -417,14 +417,14 @@ else
 
     case "$LOTUS_DEPLOYMENT" in
         "standalone")
-            $BIN_DIR/ic-promote \
+            $BIN_DIR/lightwave domain promote \
                 --domain $LOTUS_DOMAIN_DEFAULT \
                 --password "$LOTUS_ADMIN_PASSWORD_DEFAULT" \
                 --site $LOTUS_SITE_NAME \
                 $LOTUS_SSL_SUBJECT_ALT_NAME_ARG
             ;;
         "partner")
-            $BIN_DIR/ic-promote \
+            $BIN_DIR/lightwave domain promote \
                 --domain $LOTUS_DOMAIN_DEFAULT \
                 --username $LOTUS_ADMIN_DEFAULT \
                 --password "$LOTUS_ADMIN_PASSWORD_DEFAULT" \
@@ -433,7 +433,7 @@ else
                 $LOTUS_SSL_SUBJECT_ALT_NAME_ARG
             ;;
         "child")
-            $BIN_DIR/ic-promote \
+            $BIN_DIR/lightwave domain promote \
                 --domain $LOTUS_DOMAIN_DEFAULT \
                 --username $LOTUS_ADMIN_DEFAULT \
                 --password "$LOTUS_ADMIN_PASSWORD_DEFAULT" \
