Added post DR restore scripts
The script takes the S3 path as an argument.

Change-Id: I4a86512d6be302cb1af936679ad2004857ce1d9e

--- a/lwraft/config/Makefile.am
+++ b/lwraft/config/Makefile.am
@@ -10,4 +10,6 @@ lwraftconf_DATA = \
     refresh-resolve-conf.sh \
     monitor-core-dump.sh
 
-bin_SCRIPTS = 
+bin_SCRIPTS = \
+    post_aws_restore_common.sh \
+    post_restore.sh
