adding oidc hotk token signature validation to post rest head (phase 1)
if validation fails, log error and let through for now
there will be another check-in to enable hard-fail

Bug Number: 2004701

Change-Id: Ia0537ca6760726c4d9290348add7adcb9c16d121

--- a/lwraft/common/Makefile.am
+++ b/lwraft/common/Makefile.am
@@ -24,6 +24,7 @@ libcommon_la_SOURCES = \
     networkutil.c \
     networkutiluniximpl.c \
     opensslclient.c  \
+    opensslutil.c  \
     parsearguments.c \
     rpcmemory.c  \
     securityutil.c \
