Remove Pending USN - Implementation
Jira ID: CNA-925

Changes:
    - Clean up pending USN logic.
    - Add new data structures to remove pending USN logic.
    - When next USN is generated for write add it to the queue for
      further processing to maintain the order of writes.
    - Fixed a bug in priorUSNCreated logic in sync state hash map which
      resulted in unpredictable behavior.
    - Cleaned up Txnretry logic.
    - Restructured replication update cookie logic.

Testing:

Functionality tests:
    - Modified condition timed wait to just condition wait.
        - Performed 200 concurrent add entires
        - Performed 200 concurrent add->modify entires
        - Performed 500 concurrent add entries
        - Performed 500 concurrent add->modify entries
      Test results: LDAP operations succeeded without any errors.

Replication tests:
    - Every tenant creation and deletion logic using dir-cli will result in
      performing
          - Add entry
          - Modify entry to add members to the group
          - Modify entry to delete members from the group
          - Delete entry

    - Performed Create tenant (using dir-cli) on all three nodes
      concurrently with a sleep of 2 seconds.
      Test results: Clean integrity check report.

    - Performed Delete tenant (using dir-cli) on all three nodes
      concurrently with a sleep of 2 seconds.
      Test results: Clean integrity check report.

    - Performed create and delete tenant (using dir-cli) on all three nodes
      concurrently with a sleep of 2 seconds in between them.
      Test results: Clean integrity check report.

    - In a three-node ring topology, exercised lightwave-proxy test
      suite overnight. There was no unexpected behavior.
      Test results: no unexpected behavior and clean integrity check
      report.

    - Enabled tombstone reaping thread to ensure, tombstone logic is
      intact.

    - Created a user and performed password modifications to exercise
      post

--- a/vmdir/server/middle-layer/Makefile.am
+++ b/vmdir/server/middle-layer/Makefile.am
@@ -32,6 +32,8 @@ libmiddle_layer_la_SOURCES = \
     specialsearch.c \
     srputil.c \
     util.c \
+    usn.c \
+    writequeue.c \
     libmain.c
 
 libmiddle_layer_la_CPPFLAGS = \
