Update DNS Metrics Collection for Rcode Errors
Bug Number: 2125726, 2125648
- Updated DNS error counter metric label with all possible rcode errors
- Created another label to identify the operation which caused the error
  (TcpRequestDataRead / UdpRequestDataRead / ForwarderResponse)
- Created another label to identify Domain: (lightwave / other)

Change-Id: Ia79ecbb882d1f25a92ac0549af5f1043ccdbdd9c

--- a/vmdns/server/common/Makefile.am
+++ b/vmdns/server/common/Makefile.am
@@ -18,6 +18,7 @@ libsrvcommon_la_SOURCES = \
     hashtable.c           \
     ldap.c                \
     lru.c                 \
+    metricsenums.c        \
     nameEntry.c           \
     recordlist.c          \
     recordobject.c        \
