OIDC metrics. Dimentions follows the existing REST service metrics.
Verified metrics from /metrics endpoint.

Bug Number: 2060916

Ran unit tests and integration tests.

Ran oidc integ tests and collected metrics:

oidc_requests_total{tenant="integ-test.com",status="200",resource="MetadataController",operation="metadata",} 2.0
oidc_requests_total{tenant="LW-TESTDOM.COM",status="200",resource="TokenController",operation="acquireTokens_CLIENT_CREDENTIALS",} 1.0
oidc_requests_total{tenant="integ-test.com",status="200",resource="TokenController",operation="acquireTokens_PASSWORD",} 3.0
oidc_requests_total{tenant="LW-TESTDOM.COM",status="200",resource="MetadataController",operation="metadata",} 3.0
oidc_requests_total{tenant="LW-TESTDOM.COM",status="200",resource="TokenController",operation="acquireTokens_SOLUTION_USER_CREDENTIALS",} 3.0
oidc_requests_total{tenant="LW-TESTDOM.COM",status="200",resource="TokenController",operation="acquireTokens_PERSON_USER_CERTIFICATE",} 1.0
oidc_requests_total{tenant="integ-test.com",status="200",resource="TokenController",operation="acquireTokens_SOLUTION_USER_CREDENTIALS",} 1.0
oidc_requests_total{tenant="LW-TESTDOM.COM",status="200",resource="TokenController",operation="acquireTokens_PASSWORD",} 18.0
oidc_requests_total{tenant="LW-TESTDOM.COM",status="200",resource="JWKSController",operation="jwks",} 4.0
oidc_requests_total{tenant="LW-TESTDOM.COM",status="400",resource="TokenController",operation="acquireTokens_PERSON_USER_CERTIFICATE",} 1.0
oidc_requests_total{tenant="LW-TESTDOM.COM",status="200",resource="TokenController",operation="acquireTokens_REFRESH_TOKEN",} 7.0
oidc_requests_total{tenant="integ-test.com",status="200",resource="JWKSController",operation="jwks",} 2.0

oidc_requests_latency_seconds_bucket{tenant="integ-test.com",resource="TokenController",operation="acquireTokens_PASSWORD",le="0.005",} 0.0
oidc_requests_latency_seconds_bucket{tenant="integ-test.com",resource="TokenController",operation="acquireTokens_PASSWORD",l

--- a/vmidentity/openidconnect/server/pom.xml
+++ b/vmidentity/openidconnect/server/pom.xml
@@ -142,8 +142,21 @@
       <artifactId>log4j-api</artifactId>
       <version>${apache.log4j.version}</version>
     </dependency>
-  </dependencies>
 
+    <!--  Metrics Dependencies -->
+    <!-- The client -->
+    <dependency>
+      <groupId>io.prometheus</groupId>
+      <artifactId>simpleclient</artifactId>
+      <version>${prometheus.version}</version>
+    </dependency>
+    <!-- Hotspot JVM metrics-->
+    <dependency>
+      <groupId>io.prometheus</groupId>
+      <artifactId>simpleclient_hotspot</artifactId>
+      <version>${prometheus.version}</version>
+    </dependency>
+  </dependencies>
   <properties>
     <rootDirectory>${basedir}/../..</rootDirectory>
   </properties>
